--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,21 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+  <!-- <link rel="icon" type="image/svg+xml"
+    href="https://avatars.githubusercontent.com/u/9839620?s=400&amp;u=efa010a062f4744250bcddc49bcad26a03d5597a&amp;v=4"> -->
+
+  <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/imgs/leopard-money.png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="gold" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/imgs/leopard-money.png" /> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>不准不要赞</title>
 </head>
 
 <body class="center">
